# Mbedtls-KCP

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakeLists_so.txt  RepeaterApp_log.h  aes_key_gen.c  aes_key_gen.h  common_sock.c  kcp_wrapper.cpp  repeater_aes.c  repeater_aes.c1  repeater_aes.h  tcp_client.c  tcp_client.h  tcp_jni.cpp  tcp_server.h  wo_aes.c  wo_aes.h
app/src/main/cpp/common/: CommonBase.c  CommonBase.h  CommonCode.h  Common_toolbox.c  Common_toolbox.h  ringbuf.c  ringbuf.h
app/src/main/cpp/common/aes/: wo_aes.c  wo_aes.h
app/src/main/cpp/common/api/: comm_api.c  comm_api.h
app/src/main/cpp/common/base64/: base64.c
app/src/main/cpp/common/ble-serial/: msg_common.h  netconnect_errcode.h  uart_mgr.h
app/src/main/cpp/common/ble-serial/ble/: ble_receiver.c  ble_receiver.h
app/src/main/cpp/common/ble-serial/uart/: uart.c  uart.h
app/src/main/cpp/common/cbuf/: char_buf.c  char_buf.h
app/src/main/cpp/common/common_dlfcn/: common_dlfcn.c  common_dlfcn.h
app/src/main/cpp/common/common_nng/: common_proxy_pubsub.c  common_proxy_pubsub.h
app/src/main/cpp/common/common_sock/: common_sock.c  common_sock.h
app/src/main/cpp/common/crypto/: aes_key_gen.c
app/src/main/cpp/common/dirsize_manager/: dirsize_manager.c  dirsize_manager.h
app/src/main/cpp/common/elog/: CMakeLists.txt
app/src/main/cpp/common/elog/elog/: elog.h  elog_cfg.h  elog_file.h  elog_file_cfg.h
app/src/main/cpp/common/elog/plugins/file/: elog_file.c
app/src/main/cpp/common/elog/port/: elog_file_port.c  elog_port.c
app/src/main/cpp/common/elog/src/: elog.c  elog_async.c  elog_buf.c  elog_utils.c
app/src/main/cpp/common/https_utils/: https_utils.c  https_utils.h
app/src/main/cpp/common/ikcp/: Common_kcp.h  ikcp.c  ikcp.h
app/src/main/cpp/common/json/: json_api.c  json_api.h
app/src/main/cpp/common/log/: log_conf.h
app/src/main/cpp/common/md5/: common_md5.c  common_md5.h
app/src/main/cpp/common/media/audio_codec/: media_aac_encoder.c  media_aac_encoder.h
app/src/main/cpp/common/media/audio_resample/: media_audio_rehandle.c  media_audio_rehandle.h
app/src/main/cpp/common/media/g711a/: media_audio_g711.c  media_audio_g711.h
app/src/main/cpp/common/media/media_alsa/: alsa_pcm.c  alsa_pcm.h
app/src/main/cpp/common/media/mp4/: g711.c  g711codec.c  g711codec.h  mp4_demuxer.c  mp4_demuxer.h  mp4_list.c  mp4_list.h  mp4_muxer.c  mp4_muxer.h
app/src/main/cpp/common/media_packet/: Common_media_slice_packet.c  Common_media_slice_packet.h
app/src/main/cpp/common/model/: model.c  model.h
app/src/main/cpp/common/ntpc/: ntpc.c  ntpc.h  phaselock.c
app/src/main/cpp/common/param_config/: dev_param.c  dev_param.h
app/src/main/cpp/common/process/: process_unils.h
app/src/main/cpp/common/queue/: comm_queue.c  comm_queue.h  comm_queue_api.c  comm_queue_api.h  element_queue.c  element_queue.h  msg_queue.c  msg_queue.h
app/src/main/cpp/common/ringbuffer/: CRingBuf.cpp  CRingBuf.h  debugLog.cpp  debugLog.h  media_service_rb_reader.c  media_service_rb_reader.h  media_service_rb_writer.c  media_service_rb_writer.h  ringbuffer.cpp  ringbuffer.h
app/src/main/cpp/common/state_machine/: state_machine.c  state_machine.h
app/src/main/cpp/common/statics/: media_static.c  media_static.h
app/src/main/cpp/common/task_queue/: task_queue.c  task_queue.h
app/src/main/cpp/common/wifi/: ble_mac.c  ble_mac.h  wifi.c  wifi.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+12 files in other folders)
